--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cybersheli_project",
   "homepage": "https://Sapirteper0402.github.io/video-player",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
